syntax = "proto3";
package mail;
option go_package = "github.com/Zhoangp/Mail-service/v1.1/mail";
import "Error/error.proto";

service MailService {
  rpc SendTokenVerifyAccount(SendTokenVerifyAccountRequest) returns(SendTokenVerifyAccountResponse);
  rpc SendTokenResetPassword(SendTokenResetPasswordRequest) returns(SendTokenResetPasswordResponse);
}
message Mail {
  string destMail = 1;
  string subject = 2;
}
message SendTokenVerifyAccountRequest {
  Mail mail = 1;
  string token = 2;
  string name = 3;
  string url = 4;
}
message SendTokenVerifyAccountResponse {
  err.ErrorResponse error = 1;
}
message SendTokenResetPasswordRequest {
  Mail mail = 1;
}
message SendTokenResetPasswordResponse {
  err.ErrorResponse error = 1;

}
message ErrorResponse {
  int64 code = 1;
  string message = 2;
}
